Fix search bar spacing

--- a/assets/sass/layouts/list.scss
+++ b/assets/sass/layouts/list.scss
@@ -55,7 +55,7 @@
       font-family: sans-serif;
       padding-left: 10px;
       width: 200px;
-      height: 1.7rem;
+      height: 1.8rem;
       border: $border solid var(--fg4);
       border-radius: $radius;
 
@@ -68,7 +68,7 @@
       position: absolute;
       aspect-ratio: 1rem;
       right: 1em;
-      top: 4.9px;
+      top: 5.3px;
       background-color: transparent;
       border: none;
       cursor: pointer;
